FIX: 피드백 응답 형식 변경, 멤버별로 피드백 묶이도록